--- a/src/app/features/administration/components/profile/administration.component.css
+++ b/src/app/features/administration/components/profile/administration.component.css
@@ -64,12 +64,18 @@
      font-weight: 600;
      font-size: 16px;
      line-height: 22px;
+     color: #000;
 }
 
 .text1 {
      font-weight: 400;
      font-size: 13px;
      line-height: 22px;
+     color: #000;
+}
+
+label {
+     color: #000;
 }
 
 .pad {
