--- a/src/app/features/base/components/dashboard/calendar/calendar.component.css
+++ b/src/app/features/base/components/dashboard/calendar/calendar.component.css
@@ -51,3 +51,27 @@
   border-radius: 0;
   font-size: 13px;
 }
+
+
+.text-end {
+  cursor: pointer;
+
+
+}
+.text-end-view {
+  border-radius: 2px;
+  border: 1px solid #00529B;
+  background-color: #ffffff;
+  color: #00529B;
+  padding: 0.6rem 1.3rem;
+  font-size: 12px;
+}
+
+
+.text-end-view:hover {
+  border: 1px solid #00529B;
+  background-color: #00529B;
+  color: white;
+  padding: 0.6rem 1.3rem;
+  font-size: 12px;
+}
