--- a/src/app/features/base/components/dashboard/tickets-summary/tickets-summary.component.html
+++ b/src/app/features/base/components/dashboard/tickets-summary/tickets-summary.component.html
@@ -24,7 +24,7 @@
     </table>
   </div>
   <div class="card-footer border-top-0" style="background-color: #ffffff">
-    <div class="text-end">
+    <div class="text-end" style="padding-bottom: 1rem;">
       <a class="text-end-view" (click)="goToViewTickets()" >VIEW ALL</a>
     </div>
   </div>
