--- a/src/app/shared/components/dynamic-table/dynamic-table.component.html
+++ b/src/app/shared/components/dynamic-table/dynamic-table.component.html
@@ -55,6 +55,8 @@
     #dt1
     (onLazyLoad)="lazyLoad($event)"
     [lazy]="true"
+    responsiveLayout="stack"
+    scrollHeight="flex"
     [columns]="tableDetails?.cols"
     [value]="tableDetails?.rows"
     [paginator]="tableDetails?.paginator"
