--- a/src/app/features/base/components/sidebar/sidebar.component.css
+++ b/src/app/features/base/components/sidebar/sidebar.component.css
@@ -32,3 +32,31 @@
   background-color: #00539b0e;
 
 }
+.sub-title {
+    background-color: white;
+    border-right: solid 1px rgba(10, 31, 107, 0.148);
+    font-size: 8px;
+
+  }
+
+  .sub-title li {
+    /* border-bottom: 1px solid rgba(0, 0, 0, 0.125); */
+    width: 80%;
+    font-size: 8px;
+  }
+
+  .sub-title li {
+    /* border-bottom: 1px solid rgba(0, 0, 0, 0.125); */
+    width: 80%;
+    font-size: 8px;
+    padding: 5px;
+  }
+
+  .sub-title li:hover {
+    /* border-bottom: 1px solid rgba(0, 0, 0, 0.125); */
+    /* background-color: #00539b08; */
+    font-weight: 900;
+    width: 100%;
+    cursor: pointer;
+
+  }
