--- a/src/app/features/entities/components/entity/list-entity/list-entity.component.html
+++ b/src/app/features/entities/components/entity/list-entity/list-entity.component.html
@@ -11,8 +11,8 @@
     </div>
     <!-- Top Buttons !-->
     <div class="d-flex my-4 ms-4">
-        <button type="button" class="btn btn-primary rounded-0 px-3 me-3" (click)="createEntity()">New Entity</button>
-        <button type="button" class="btn filter-btn rounded-0 px-4 me-3"> <i class="fa fa-filter pe-2"></i>Filter</button>
+      <button type="button" class="btn btn-primary rounded-0 px-3 me-3" (click)="createEntity()"><i class="fa-solid fa-plus"></i>&nbsp; New Entity</button>
+      <button type="button" class="btn filter-btn rounded-0 px-4 me-3"> <i class="fa fa-filter pe-2"></i>Filter</button>
     </div>
     <div class="my-4 ms-4 me-4">
         <app-dynamic-table
