--- a/src/styles.css
+++ b/src/styles.css
@@ -5,8 +5,6 @@
 @import "~@fortawesome/fontawesome-free/css/brands.css";
 @import "assets/css/turnkey-styles.css";
 
-
-
 .fadeIn {
   -webkit-animation-name: fadeIn;
   animation-name: fadeIn;
@@ -33,13 +31,11 @@
   }
 }
 
-
- .p-fluid .p-inputtext {
+.p-fluid .p-inputtext {
   width: 100%;
   height: 30px;
   border-radius: 0;
 }
-
 
 .p-datatable.p-datatable-sm .p-datatable-thead > tr > th {
   padding: 0.1rem 0.5rem;
@@ -47,11 +43,10 @@
   background-color: #00539b03;
 }
 
- svg.p-icon.p-sortable-column-icon {
+svg.p-icon.p-sortable-column-icon {
   height: 10px;
-
 }
- tr.ng-star-inserted {
+tr.ng-star-inserted {
   border: 0;
 }
 
@@ -60,4 +55,14 @@
   font-weight: 700;
 }
 
+.p-tabview-nav {
+  font-size: 12px;
+}
 
+.p-tabview .p-tabview-nav li.p-highlight .p-tabview-nav-link:active,
+.p-tabview .p-tabview-nav li.p-highlight .p-tabview-nav-link:hover,
+.p-tabview .p-tabview-nav li.p-highlight .p-tabview-nav-link:focus
+ {
+  border: 0;
+  border-radius: 0;
+}
