VQ-292 Option to show or hide cancel and save dynamic modal buttons

--- a/src/app/shared/components/dynamic-simple-modal/dynamic-simple-modal.component.html
+++ b/src/app/shared/components/dynamic-simple-modal/dynamic-simple-modal.component.html
@@ -15,7 +15,7 @@
         </div>
       </div>
 
-      <div class="modal-footer">
+      <div class="modal-footer" *ngIf="showModalButtons">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="emitAction()">Close</button>
         <button type="button" class="btn btn-primary" (click)="emitAction()">{{ modalButtonLabel }}</button>
       </div>
