--- a/src/app/features/administration/components/tickets/ticket-details/ticket-details.component.html
+++ b/src/app/features/administration/components/tickets/ticket-details/ticket-details.component.html
@@ -7,7 +7,8 @@
       <app-ticket-reports></app-ticket-reports>
     </p-tabPanel>
     <p-tabPanel header="Documents">
-      Documents
+      <app-ticket-documents [currentTicket]="currentTicket">
+      </app-ticket-documents>
     </p-tabPanel>
   </p-tabView>
 </div>
