--- a/src/app/features/administration/components/tickets/ticket-details/tax-details/tax-details.component.html
+++ b/src/app/features/administration/components/tickets/ticket-details/tax-details/tax-details.component.html
@@ -1,1 +1,22 @@
-<p>tax-details works!</p>
+<table class="table table-borderless mt-3">
+  <thead>
+  <tr class="top-row">
+    <th>Description</th>
+    <th>Rate</th>
+    <th class="text-center">Rate Type</th>
+    <th class="currency">Amount</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr class="tax-items" *ngFor="let tax of taxInformation">
+    <td>{{ getTaxDescription(tax?.transactionTypeCode) | titlecase }}</td>
+    <td>{{ tax.rate }}</td>
+    <td class="text-center">{{ tax.rateType }}</td>
+    <td class="currency">{{ tax.amount | number: '1.2-2' }}</td>
+  </tr>
+  <tr class="bottom-row">
+    <th colspan="3">Total Premium Plus Taxes</th>
+    <th class="currency">{{ totalPremium | number: '1.2-2' }}</th>
+  </tr>
+  </tbody>
+</table>
