--- a/src/app/shared/components/dynamic-setup-search-list-screen/dynamic-setup-search-list-screen.component.css
+++ b/src/app/shared/components/dynamic-setup-search-list-screen/dynamic-setup-search-list-screen.component.css
@@ -65,30 +65,47 @@ label{
     width: 4px;
     height:7px
   }
-  
+
   /* Track */
   ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 3px grey; 
+    box-shadow: inset 0 0 3px grey;
     border-radius: 10px;
   }
-   
+
   /* Handle */
   ::-webkit-scrollbar-thumb {
-    background: #D9D9D9; 
+    background: #D9D9D9;
     border-radius: 10px;
   }
-  
+
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
-    background: rgba(0, 30, 187, 0.1); 
+    background: rgba(0, 30, 187, 0.1);
   }
   #table-responsive{
     display: block;
     width: 100%;
     overflow-x: auto;
-    
+
   }
   .paramlist{
     overflow-y: scroll;
     max-height: 360px;
   }
+
+
+  .text-right {
+  width: 4rem;
+  border: 1px solid #00529B;
+  color: #00529B;
+  border-radius: 0;
+  background-color: white;
+  font-size: 12px;
+  margin: 0 0 1rem 0;
+  padding: 0.3em;
+ }
+
+ .text-right:hover {
+  color: #ffffff !important;
+  background-color: #00529B;
+ }
