--- a/src/app/features/administration/components/tickets/ticket-details/tax-details/tax-details.component.html
+++ b/src/app/features/administration/components/tickets/ticket-details/tax-details/tax-details.component.html
@@ -1,10 +1,10 @@
 <table class="table table-borderless mt-3">
   <thead>
   <tr class="top-row">
-    <th>Description</th>
-    <th>Rate</th>
-    <th class="text-center">Rate Type</th>
-    <th class="currency">Amount</th>
+    <td>Description</td>
+    <td>Rate</td>
+    <td class="text-center">Rate Type</td>
+    <td class="currency">Amount</td>
   </tr>
   </thead>
   <tbody>
