--- a/src/app/features/administration/components/tickets/view-tickets/view-tickets.component.html
+++ b/src/app/features/administration/components/tickets/view-tickets/view-tickets.component.html
@@ -44,7 +44,10 @@
 </div>
 <div class="my-4 mx-4">
   <div class="card">
-    <div class="card-body">
+    <div class="card-body" style="position: relative;">
+
+      <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
+
       <p-table #dt
       [value]="filteredTickets"
       [(selection)]="selectedTickets"
