--- a/src/app/features/entities/components/intermediary/list-intermediary/list-intermediary.component.html
+++ b/src/app/features/entities/components/intermediary/list-intermediary/list-intermediary.component.html
@@ -17,7 +17,9 @@
     <button type="button" class="btn filter-btn rounded-1 px-3 me-3"> <i class="fa fa-filter pe-2"></i>Filter</button>
   </div>
 
-  <div class="my-4 ms-4 me-4">
+  <div class="my-4 ms-4 me-4" style="position: relative;">
+    <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
+
     <app-dynamic-table
       [tableDetails]="tableDetails"
       (onLazyLoad)="lazyLoadAgents($event)">
