correct changes to dynamic-setup-search-list-screen.component

--- a/src/app/shared/components/dynamic-setup-search-list-screen/dynamic-setup-search-list-screen.component.html
+++ b/src/app/shared/components/dynamic-setup-search-list-screen/dynamic-setup-search-list-screen.component.html
@@ -29,7 +29,7 @@
                   <ul class="list-group list-group-light" *ngIf="paramsList.length > 0">
                       <li class="list-group-item list-group-item-action px-3 border-0"
                           *ngFor="let data of paramsList" (click)="loadParam(data.code, data)"
-                          [ngClass]="{ activity: isActive(data) }" id="paramsList">{{ data.name | lowercase }}</li>
+                           id="paramsList">{{ data.name | lowercase }}</li>
                   </ul>
                   <div class="d-flex justify-content-center" *ngIf="paramsList.length === 0">
                       <div class="spinner-border text-primary" role="status"></div>
